--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         /* Centering buttons */
         .button-container {
             align:center
-            text-align: center;
+            text-align; center;
             margin-top: 30px;
         }
     </style>
