--- a/music.html
+++ b/music.html
@@ -151,7 +151,7 @@
     <div class="footer">
         <p>&copy; 2025 Marco Songs. All rights reserved.</p>
     </div>
-<center><a class="button" href="C:\Users\stjos\OneDrive\Desktop\OMKAR marcoflim\MARCO3.HTML">Next Page</a></center>
+<center><a href="Music.HTML" class="button">Next Page</a>Next Page</a></center>
 <Br><Br><Br>
 </body>
 </html>
