--- a/index.html
+++ b/index.html
@@ -210,4 +210,4 @@
             <div>
                 <h3>Language:</h3>
                 <p>Malayalam</p>
-<a href="Music.HTML" class="button">Next Page</a>
+<a href="music.html" class="button">Next Page</a>
