--- a/music.html
+++ b/music.html
@@ -151,10 +151,9 @@
     <div class="footer">
         <p>&copy; 2025 Marco Songs. All rights reserved.</p>
     </div>
-<center><a href="Music.HTML" class="button">Next Page</a>Next Page</a></center>
+<center><a href="cast.html" class="button">Next Page</a>Next Page</a></center>
 <Br><Br><Br>
 </body>
 </html>
-
 </body>
 </html>
